[add] all projects and start the images

--- a/app/styles/scss/config/_colors.scss
+++ b/app/styles/scss/config/_colors.scss
@@ -1,5 +1,5 @@
 // Main colors
-$primaryColor: #3688ff;
+$primaryColor: #ffffff; // ou aloes ca : #B99558
 $darkPrimaryColor: #304bd8;
 $primaryColorLighter: #f3f8ff;
 $primaryColorLite: #d3e3fb;
