--- a/app/styles/scss/config/_fonts.scss
+++ b/app/styles/scss/config/_fonts.scss
@@ -1,1 +1,28 @@
+
+
 $fontPrimary: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
+
+@font-face {
+  font-family: "GT America Bold";
+  src: url("../font/GT-America-Extended-Bold.otf");
+}
+
+@font-face {
+  font-family: "GT America Thin";
+  src: url("../font/GT-America-Extended-Thin.otf");
+}
+
+@font-face {
+  font-family: "ST Colombe Ex Light";
+  src: url("../font/saintecolombe-extralight.otf");
+}
+
+@font-face {
+  font-family: "ST Colombe Ex Light Italic";
+  src: url("../font/saintecolombe-extralightitalic.otf");
+}
+
+$font-1-thin: "GT America Thin";
+$font-1-bold: "GT America Bold";
+$font-2-light: "ST Colombe Ex Light";
+$font-2-italic: "ST Colombe Ex Light Italic";
