--- a/app/styles/scss/general/_main.scss
+++ b/app/styles/scss/general/_main.scss
@@ -152,6 +152,7 @@ body {
         // Arrow
 
         .circle-arrow{
+            position: relative;
             height: 150px;
             width: 150px;
             border: dashed 2px $primaryColor;
@@ -163,6 +164,10 @@ body {
             justify-content: center;
 
             svg{
+                position: absolute;
+                transition: 100ms;
+                top: calc((150px - 126px) / 2);
+                left: calc((150px - 104px) / 2);
                 transform: rotate(-90deg);
                 height: 126px;
                 width: 104px;
@@ -172,6 +177,91 @@ body {
                 }
             }
         }
-
+        
+        
+        // Absolute text
+        .absolute-text{
+            width: 100%;
+            height: 300px;
+            position: relative;
+            display: flex;
+            
+            p{
+                padding: 20px 60px;
+                border: solid 1px $primaryColor;
+                font-size: $font-2-light;
+                display: inline-block;
+                position: absolute;
+                font-size: 100px;
+                border-radius: 50%;
+            }
+            
+            p:first-child{
+                transform: rotate(-10deg);
+                top: 20px;
+                left: 100px;
+                width: 700px;
+            }
+            
+            p:last-child{
+                transform: rotate(10deg);
+                transform-origin: left center;
+                bottom: 20px;
+                right: 100px;
+                width: 500px;
+            }
+        }
+        
+        
+        
+        // Table
+        .container-tab{
+            width: 100%;
+            position: relative;
+            
+            .header-tab{
+                width: 60%;
+                display: flex;
+                justify-content: flex-start;
+                padding: 10px 0;
+            }
+    
+            .plus{
+                width: 20%;
+                img{
+                    margin: 0 0 0 40%;
+                    height: 100%;
+                }
+            }
+    
+            .domain, .project{
+                width: 40%;
+                font-size: 17px;
+                font-family: "GT America Bold";
+                color: $primaryColor;
+            }
+            
+            .domain{
+                font-family: "GT America Thin"
+            }
+            
+            .line{
+                text-decoration: none;
+                display: flex;
+                width: 60%;
+                border-top: solid 1px white;
+                padding: 10px 0;
+            }
+            
+            // images projects
+            .img-project{
+                position: absolute;
+                opacity: 0;
+                width: 450px;
+                top: 10%;
+                right: 10%;
+            }
+            
+        }
     }
 }
