--- a/app/styles/scss/general/_main.scss
+++ b/app/styles/scss/general/_main.scss
@@ -1,7 +1,10 @@
 html {
     box-sizing: border-box;
 }
-*{ box-sizing: border-box}
+*{
+    box-sizing: border-box;
+    margin: 0;
+}
 html,
 body {
     font-family: $fontPrimary;
@@ -70,19 +73,27 @@ body {
     left: 0;
     height: 100vh;
     width: 100vw;
-    padding: 0 40px 40px 40px;
     overflow-y: scroll;
     nav{
         width: 100%;
-        padding: 20px;
+        padding: 20px 40px;
         display: flex;
         justify-content: space-between;
+        align-items: center;
+        background-color: rgba(0, 0, 0, 0.00);
+        @media screen and (max-width: 800px) {
+            padding: 20px 20px;
+        }
+        
         a{
             font-family: "GT America Bold";
             color: $primaryColor;
+            text-decoration: none;
             &:hover{
-                text-decoration: none;
-                transform: translateY(10px);
+                text-decoration: line-through;
+            }
+            @media screen and (max-width: 700px) {
+                font-size: 13px;
             }
         }
 
@@ -98,170 +109,352 @@ body {
         .switch-mode{
             height: 24px;
             width: 24px;
-            transform: rotate(180deg);
+            transition-duration: 300ms;
             cursor: pointer;
-
-            g:last-child{
-                fill: $primaryColor;
-            }
         }
     }
 
-    section{
-        width: 100%;
-        border: solid $primaryColor 1px;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: center;
-
-        p{
-            font-family: $font-2-light;
-            color: $primaryColor;
-            font-size: 85px;
-            padding-top: 150px;
+    .container-body{
+        padding: 0 40px 80px 40px;
+        background-color: rgba(0, 0, 0, 0.00);
+        @media screen and (max-width: 800px) {
+            padding: 0 20px 80px 20px;
+        }
+        section{
             width: 100%;
-            text-align: center;
-            line-height: 100px;
-            z-index: 20;
-            .word-hover{
-                position: relative;
-                font-family: $font-2-italic;
+            border: solid $primaryColor 1px;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: center;
+        
+            p{
+                font-family: $font-2-light;
+                color: $primaryColor;
+                font-size: 85px;
+                padding-top: 150px;
+                width: 100%;
+                text-align: center;
+                line-height: 100px;
                 z-index: 20;
-                &:before{
-                    content: "";
-                    z-index: 1000;
-                    position: absolute;
-                    background: white;
-                    width: 100%;
-                    height: 100%;
-                    opacity: 0;
-                    filter: blur(50px);
-                    transition: 300ms;
+                @media screen and (max-width: 1625px) {
+                    font-size: 65px;
+                    line-height: 80px;
                 }
-                &:hover{
-                    cursor: pointer;
-                    &:before{
-                        transition: 300ms;
-                        opacity: 0.5;
+                @media screen and (max-width: 1277px) {
+                    font-size: 55px;
+                    line-height: 70px;
+                    padding: 150px 20px 0 20px;
+                }
+                
+                @media screen and (max-width: 1000px) {
+                    padding: 50px 20px 0 20px;
+                    font-size: 55px;
+                }
+    
+                @media screen and (max-width: 700px) {
+                    line-height: 60px;
+                    font-size: 40px;
+                }
+    
+                @media screen and (max-width: 700px) {
+                    line-height: 45px;
+                    font-size: 26px;
+                    text-align: left;
+                }
+                
+                .display-none-mobile{
+                    @media screen and (max-width: 1277px) {
+                        display: none;
+                    }
+                }
+                
+                .word-hover{
+                    position: relative;
+                    font-family: $font-2-italic;
+                    z-index: 20;
+                    &:hover{
+                        cursor: pointer;
+                        text-decoration:line-through;
+                    }
+                }
+            }
+        
+            // Arrow
+            .circle-arrow{
+                position: relative;
+                height: 150px;
+                width: 150px;
+                border: dashed 2px $primaryColor;
+                border-radius: 100px;
+                margin: 50px 0 100px 0;
+                cursor: pointer;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                text-decoration: none;
+                padding: 0 10px 0 0;
+    
+                @media screen and (max-width: 600px) {
+                    height: 100px;
+                    width: 100px;
+                    margin: 30px 0 100px 0;
+                }
+            
+                p{
+                    transition: 100ms;
+                    font-size: 100px;
+                    margin: 0;
+                    padding: 0;
+                    font-family: $font-2-light;
+                    transform: rotate(-90deg);
+                    @media screen and (max-width: 600px) {
+
+                    }
+                    text{
+                        fill: $primaryColor;
+                        stroke: $primaryColor;
+                    }
+                }
+            }
+        
+        
+            // Absolute text
+            .absolute-text{
+                width: 100%;
+                height: 300px;
+                position: relative;
+                display: flex;
+    
+                @media screen and (max-width: 1236px) {
+                    display: none;
+                }
+            
+                p{
+                    padding: 20px 60px;
+                    border: solid 1px $primaryColor;
+                    font-size: $font-2-light;
+                    display: inline-block;
+                    position: absolute;
+                    font-size: 100px;
+                    border-radius: 50%;
+                    @media screen and (max-width: 1277px) {
+                        font-size: 85px;
+                    }
+                }
+            
+                p:first-child{
+                    transform: rotate(-10deg);
+                    top: 20px;
+                    left: 100px;
+                    width: 700px;
+                    @media screen and (max-width: 1277px) {
+                        width: 600px;
+                    }
+                }
+            
+                p:last-child{
+                    transform: rotate(10deg);
+                    transform-origin: left center;
+                    bottom: 20px;
+                    right: 100px;
+                    width: 500px;
+                    @media screen and (max-width: 1277px) {
+                        width: 500px;
+                    }
+                }
+            }
+        
+        
+        
+            // Table
+            .container-tab{
+                width: 100%;
+                position: relative;
+            
+                .header-tab{
+                    width: 60%;
+                    display: flex;
+                    justify-content: flex-start;
+                    padding: 10px 0;
+                    @media screen and (max-width: 1000px) {
+                        width: 100%;
+                    }
+                }
+            
+                .plus{
+                    width: 20%;
+                    img{
+                        margin: 0 0 0 40%;
+                        height: 100%;
+                        @media screen and (max-width: 480px) {
+                            margin: 0 0 0 20%;
+                        }
+                    }
+                    @media screen and (max-width: 480px) {
+                        width: 10%;
+                    }
+                    @media screen and (max-width: 414px) {
+                        display: none;
+                    }
+                }
+            
+                .domain, .project{
+                    width: 40%;
+                    font-size: 17px;
+                    font-family: "GT America Bold";
+                    color: $primaryColor;
+                    @media screen and (max-width: 600px) {
+                        font-size: 15px;
+                    }
+                }
+                
+                .project{
+                    @media screen and (max-width: 550px) {
+                        width: 50%;
+                    }
+                    @media screen and (max-width: 414px) {
+                        width: 60%;
+                        padding-left: 15px;
+                    }
+                }
+            
+                .domain{
+                    @media screen and (max-width: 550px) {
+                        width: 30%;
+                    }
+                    @media screen and (max-width: 414px) {
+                        width: 40%;
+                    }
+                    font-family: "GT America Thin"
+                }
+            
+                .line{
+                    text-decoration: none;
+                    display: flex;
+                    width: 60%;
+                    border-top: solid 1px white;
+                    padding: 10px 0;
+                    @media screen and (max-width: 1000px) {
+                        width: 100%;
+                    }
+                }
+            
+                // images projects
+                .img-project{
+                    position: absolute;
+                    opacity: 0;
+                    width: 450px;
+                    top: 10%;
+                    right: 10%;
+                }
+            }
+        }
+    }
+    
+    // footer
+    footer{
+        width: 100%;
+        background: rgba(0, 0, 0, 0.49);
+    
+        .scroll-text {
+            display: flex;
+            position: relative;
+            border-bottom: solid 1px $primaryColor;
+            width: 100%;
+            height: auto;
+            margin: auto;
+            overflow: hidden;
+            z-index: 1;
+        
+            .text {
+                display: flex;
+                align-items: center;
+                justify-content: flex-start;
+                width: 100%;
+                height: 100%;
+                white-space: nowrap;
+                transition: all 1s ease;
+                & > div {
+                    display: flex;
+                    animation: scrollText 25s infinite linear;
+                }
+                p {
+                    margin: 0 10px;
+                    font-size: 140px;
+                    color: rgba(255,255,255,1);
+                    transition: all 100ms ease;
+                    font-family: 'ST Colombe Ex Light Italic';
+                    @media screen and (max-width: 1500px) {
+                        font-size: 100px;
+                    }
+                    @media screen and (max-width: 1000px) {
+                        font-size: 80px;
+                    }
+                    @media screen and (max-width: 550px) {
+                        font-size: 60px;
                     }
                 }
             }
         }
-
-        // Arrow
-
-        .circle-arrow{
-            position: relative;
-            height: 150px;
-            width: 150px;
-            border: dashed 2px $primaryColor;
-            border-radius: 100px;
-            margin: 100px 0;
-            cursor: pointer;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-
-            svg{
-                position: absolute;
-                transition: 100ms;
-                top: calc((150px - 126px) / 2);
-                left: calc((150px - 104px) / 2);
-                transform: rotate(-90deg);
-                height: 126px;
-                width: 104px;
-                text{
-                    fill: $primaryColor;
-                    stroke: $primaryColor;
-                }
+        
+        
+        h4{
+            font-size: 18px;
+            text-align: center;
+            color: $primaryColor;
+            margin-top: 100px;
+            font-family: "GT America Bold";
+            @media screen and (max-width: 550px) {
+                font-size: 14px;
             }
         }
         
-        
-        // Absolute text
-        .absolute-text{
-            width: 100%;
-            height: 300px;
-            position: relative;
-            display: flex;
-            
-            p{
-                padding: 20px 60px;
-                border: solid 1px $primaryColor;
-                font-size: $font-2-light;
-                display: inline-block;
-                position: absolute;
-                font-size: 100px;
-                border-radius: 50%;
+        .mail{
+            font-size: 69px;
+            text-align: center;
+            color: $primaryColor;
+            text-decoration: none;
+            font-family: 'ST Colombe Ex Light Italic';
+            @media screen and (max-width: 1000px) {
+                font-size: 40px;
             }
-            
-            p:first-child{
-                transform: rotate(-10deg);
-                top: 20px;
-                left: 100px;
-                width: 700px;
-            }
-            
-            p:last-child{
-                transform: rotate(10deg);
-                transform-origin: left center;
-                bottom: 20px;
-                right: 100px;
-                width: 500px;
+            @media screen and (max-width: 550px) {
+                font-size: 25px;
             }
         }
         
+        a{
+            font-size: 35px;
+            text-decoration: none;
+            font-family: 'ST Colombe Ex Light Italic';
+            display: block;
+            text-align: center;
+            color: $primaryColor;
+            @media screen and (max-width: 550px) {
+                font-size: 25px;
+            }
+        }
         
-        
-        // Table
-        .container-tab{
-            width: 100%;
-            position: relative;
-            
-            .header-tab{
-                width: 60%;
-                display: flex;
-                justify-content: flex-start;
-                padding: 10px 0;
+        span{
+            display: block;
+            text-align: center;
+            color: $primaryColor;
+            margin-top: 150px;
+            padding-bottom: 40px;
+            font-size: 15px;
+            @media screen and (max-width: 550px) {
+                margin-top: 60px;
             }
-    
-            .plus{
-                width: 20%;
-                img{
-                    margin: 0 0 0 40%;
-                    height: 100%;
-                }
-            }
-    
-            .domain, .project{
-                width: 40%;
-                font-size: 17px;
-                font-family: "GT America Bold";
-                color: $primaryColor;
-            }
-            
-            .domain{
-                font-family: "GT America Thin"
-            }
-            
-            .line{
-                text-decoration: none;
-                display: flex;
-                width: 60%;
-                border-top: solid 1px white;
-                padding: 10px 0;
-            }
-            
-            // images projects
-            .img-project{
-                position: absolute;
-                opacity: 0;
-                width: 450px;
-                top: 10%;
-                right: 10%;
-            }
-            
         }
     }
+}
+
+
+/*div:hover {
+  animation-play-state: paused;
+}*/
+@keyframes scrollText {
+    from   { transform: translateX(0%); }
+    to { transform: translateX(-50%); }
 }
